ACE: build examples via cmake

--- a/ACE/CMakeLists.txt
+++ b/ACE/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 
 project(ACERoot)
 
+set(CURRENT_SOLUTION_FOLDER "ACE")
+
 if (WIN32 OR MINGW OR MSYS)
     set(config_h_contents "#include \"ace/config-windows.h\"\n")
 elseif (UNIX)
@@ -17,6 +19,24 @@ Endif()
 
 file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/ace/config.h" "${config_h_contents}")
 
+set(ACE_ROOT_FILES
+    ACE.mwc
+    ACE-INSTALL.html
+    AUTHORS
+    CMakeLists.txt
+    COPYING
+    NEWS
+    PROBLEM-REPORT-FORM
+    README
+    THANKS
+    VERSION.txt
+)
+add_custom_target(${PROJECT_NAME} SOURCES ${ACE_ROOT_FILES})
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "${CURRENT_SOLUTION_FOLDER}")
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ACE_ROOT_FILES})
+
 add_subdirectory(ace)
 add_subdirectory(ace/SSL)
-
+if (ACE_BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
