--- a/ACE/ace/SSL/CMakeLists.txt
+++ b/ACE/ace/SSL/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 
 project(ACE_SSL)
 
+set(CURRENT_SOLUTION_FOLDER "ACE/ace/SSL")
+
 set(VCPKG_APPLOCAL_DEPS OFF)
 add_library(${PROJECT_NAME} SHARED)
 
@@ -10,7 +12,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 )
 
 file(GLOB ACE_SSL_SRCS CONFIGURE_DEPENDS
-    "*.h"
     "*.cpp"
 )
 
@@ -18,14 +19,20 @@ list(REMOVE_ITEM ACE_SSL_SRCS
     "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pch.h"
 )
 
-set(ACE_SSL_INCL_LIST ${ACE_SSL_SRCS})
+file(GLOB ACE_SSL_INCL_LIST CONFIGURE_DEPENDS
+    "*.h"
+    "*.inl"
+)
 
-list(REMOVE_ITEM ACE_SSL_SRCS
+list(REMOVE_ITEM ACE_SSL_INCL_LIST
+    "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pch.h"
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
     ${ACE_SSL_SRCS}
 )
+
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "${CURRENT_SOLUTION_FOLDER}")
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ACE_SSL_SRCS})
 source_group(".cmake" FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)
 
@@ -69,12 +76,19 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     LINK_WHAT_YOU_USE ON
 )
 
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES
+        ARCHIVE_OUTPUT_DIRECTORY "${BUILD_OUTPUT_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY "${BUILD_OUTPUT_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY "${BUILD_OUTPUT_DIR}"
+)
+
 install(TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
 )
 
-install(FILES ${ACE_INCL_LIST}
+install(FILES ${ACE_SSL_INCL_LIST}
     DESTINATION include/ace/SSL
 )
