--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ if (NOT VCPKG_ROOT)
 endif()
 
 if (NOT VCPKG_TARGET_TRIPLET OR "${VCPKG_TARGET_TRIPLET}" STREQUAL "x64-")
-    if (WIN32)
+    if (MSVC)
         set(VCPKG_TARGET_TRIPLET x64-windows)
-    elseif (MSYS OR MINGW)
-        set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
+    elseif (MINGW OR MSYS)
+        set(VCPKG_TARGET_TRIPLET x64-msys-clang)
     else()
         set(VCPKG_TARGET_TRIPLET x64-linux)
     endif()
